add option to add metadata